# FRC3484_Lib_Python

./: .gitignore  README.md  pyproject.toml  requirements.txt
frc3484_lib/: vision.py
src/frc3484/: __init__.py  controls.py  datatypes.py  leds.py  leds.pyi  motion.py  pathfinding.py  pathfinding.pyi  pose_manipulation.py  pose_manipulation.pyi  vision.py  vision.pyi
src/frc3484/__lib/: __init__.py
src/frc3484/__lib/controls/: __init__.py  controller.py  controller_constants.py
src/frc3484/__lib/datatypes/: __init__.py  motion_datatypes.py  pathing_datatypes.py
src/frc3484/__lib/leds/: colorstack.py  colorwave.py  fallingsand.py  fire.py  static.py  utils.py
src/frc3484/__lib/motion/: angular_pos_motor.py  expo_motor.py  linear_pos_motor.py  power_motor.py  velocity_motor.py
src/frc3484/__lib/pathfinding/: __init__.py  config.py  final_alignment_command.py  pathfinding.py
src/frc3484/__lib/pose_manipulation/: __init__.py  pose_manipulation.py
src/frc3484/__lib/vision/: __init__.py  vision.py
src/frc3484_lib/: __init__.py  controls.py  datatypes.py  motion_datatypes.py  pathfinding.py  pathing_datatypes.py  pose_manipulation.py  swerve_datatypes.py  vision.py
src/frc3484_lib/_controls/: controller.py
src/frc3484_lib/_datatypes/: __init__.py  pathing_datatypes.py  swerve_datatypes.py
src/frc3484_lib/_pathfinding/: pathfinding.py
src/frc3484_lib/_vision/: vision.py
stubs/frc3484/: __init__.pyi  controls.pyi  datatypes.pyi  leds.pyi  motion.pyi  pathfinding.pyi  pose_manipulation.pyi  vision.pyi
stubs/frc3484/__lib/controls/: controller.pyi  controller_constants.pyi
stubs/frc3484/__lib/datatypes/: motion_datatypes.pyi  pathing_datatypes.pyi  swerve_datatypes.pyi
stubs/frc3484/__lib/leds/: colorstack.pyi  colorwave.pyi  fallingsand.pyi  fire.pyi
stubs/frc3484/__lib/motion/: angular_pos_motor.pyi  linear_pos_motor.pyi  power_motor.pyi  velocity_motor.pyi
stubs/frc3484/__lib/pathfinding/: config.pyi  final_alignment_command.pyi  pathfinding.pyi
stubs/frc3484/__lib/pose_manipulation/: pose_manipulation.pyi
stubs/frc3484/__lib/vision/: vision.pyi
typings/frc3484/: __init__.pyi  controls.pyi  datatypes.pyi  motion.pyi
typings/frc3484/__lib/controls/: controller.pyi  controller_constants.pyi
typings/frc3484/__lib/leds/: colorstack.pyi  (+3 more)
(+12 files in other folders)
