[project]
name = "frc3484-lib"
version = "0.1"
description = "FRC Team 3484's python library for frequently used code"
readme = "README.md"
authors = [
    { name = "thelegendofmario", email = "ethanfrancis577@gmail.com" },
    { name = "Jakob Spurgat", email = "jakob@spurgat.net" }
]
maintainers = [
    { name = "FRC Team 3484" },
]
requires-python = ">=3.11"
dependencies = [
    "wpilib",
    "robotpy",
    "robotpy-commands-v2",
    "robotpy-pathplannerlib",
    "phoenix6",
    "photonlibpy",
    "robotpy-apriltag",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"