[project]
name = "frc3484"
version = "0.2.6"
description = "FRC Team 3484's python library for frequently used code"
readme = "README.md"
authors = [
    { name = "diflouroethane", email = "ethanfrancis577@gmail.com" },
    { name = "Jakob Spurgat", email = "jakob@spurgat.net" }, 
    { name = "Ethan DeArmond", email = "eedearmond@gmail.com" },
    { name = "Noah Foertmeyer", email = "nofoert@gmail.com" }
]
maintainers = [
    { name = "FRC Team 3484" },
]
requires-python = ">=3.12"
dependencies = [
    "wpilib",
    "robotpy",
    "robotpy-commands-v2",
    "robotpy-pathplannerlib",
    "phoenix6",
    "photonlibpy",
    "robotpy-apriltag",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
